# sdc

./: .gitignore  CMakeLists.txt  README.md  RecursiveStateEstimation_GeraldBaulig.ipynb  hw3_node  imu_viz_node.py  package.xml
hw3_0780827/: README.md  package.xml
hw3_0780827/launch/: hw3_node
hw3_0780827/src/: imu_viz_node.py
hw4_0780827/: CMakeLists.txt  README.md  package.xml
hw4_0780827/launch/: hw4_node  hw4_node_tf  view.rviz
hw4_0780827/src/: imu_remap_node.py  track_viz_node.py
hw4_0780827/tools/: rmat2quat.py
