<?xml version="1.0"?>
<package format="2">
  <name>hw3_0780827</name>
  <version>0.0.1</version>
  <description>A simple subscriber to track IMU</description>

  <maintainer email="gerald.baulig@gmail.com">Gerry</maintainer>
  <license>UNLICENSE</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sys</build_depend>
  <build_depend>argparse</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>sys</build_export_depend>
  <build_export_depend>argparse</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>sys</exec_depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package>
