<?xml version="1.0"?>
<package format="2">
  <name>hw3_0780827</name>
  <version>0.0.1</version>
  <description>A simple subscriber to track IMU</description>

  <maintainer email="gerald.baulig@gmail.com">Gerald Baulig</maintainer>
  <license>UNLICENSE</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>argparse</build_depend>
  <build_depend>numpy</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

</package>
